# codexify

./: .gitignore  Cargo.toml  README.md  cspell.config.yaml  flake.nix  justfile
crates/server/: Cargo.toml
crates/server/src/: http.rs  lib.rs  service.rs  stdio.rs
crates/tools/: Cargo.toml
crates/tools/src/: apply_patch.rs  exec_command.rs  lib.rs  shell_command.rs  view_image.rs
