[workspace.package]
version = "0.0.1"
edition = "2024"
authors = [ "藍+85CD" ]
rust-version = "1.95"
description = ""
documentation = "https://github.com/kwaa/codexify"
readme = "README.md"
homepage = "https://github.com/kwaa/codexify"
repository = "https://github.com/kwaa/codexify"
license = "Apache-2.0"
publish = false

[package]
name = "codexify"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace]
members = [
  ".",
  "./crates/server",
  "./crates/tools"
]

[workspace.dependencies]
base64 = "0.22.1"
rmcp = { version = "2.1.0", default-features = false, features = [
  "server",
  "transport-io",
  "transport-streamable-http-server"
] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dependencies]
